fix: jar包启动报错